# Gastos-backend

./: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 0bbf40f2c677_create_initial_schema.py  2c9a3e8b4d5f_add_notification_logs.py
app/: main.py
app/api/: router.py
app/api/v1/: router.py
app/core/: config.py  exceptions.py  security.py
app/db/: mixins.py  models.py  session.py
app/modules/: __init__.py
app/modules/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/debts/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/expenses/: defaults.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/income/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/notifications/: email_service.py  models.py  reminder_service.py  repository.py  router.py  scheduler.py
app/modules/reports/: router.py  schemas.py  service.py
app/modules/users/: models.py  repository.py  schemas.py  service.py
app/shared/: constants.py
scripts/: seed_expense_categories.py
