[project]
name = "gastos-backend"
version = "0.1.0"
description = "Backend para la app de gastos"
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "pwdlib[argon2]>=0.2.1,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
